--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <modules>
         <module>spring-boot-starter</module>
         <module>auth-services</module>
+        <module>api-gateway</module>
+        <module>event-manager</module>
     </modules>
 
     <properties>
