--- a/auth-services/src/main/resources/application.properties
+++ b/auth-services/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.hibernate.SQL=debug
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= create
 
